--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,5 +3,20 @@ version: '1.0'
 main: nl.multitime.multiPermissions.MultiPermissions
 api-version: '1.20'
 authors: [ MultiTime ]
-description: Minecraft Client Made by Multtime himself
+description: Een eenvoudige en gebruiksvriendelijke permissiemanager voor Minecraft servers
 website: #SOON
+
+commands:
+  perms:
+    description: Hoofdcommando voor MultiPermissions
+    usage: /perms <help|add|remove|list|group>
+    aliases: [permissions, perm, mp]
+    permission: multipermissions.admin
+
+permissions:
+  multipermissions.admin:
+    description: Geeft toegang tot alle MultiPermissions commando's
+    default: op
+  multipermissions.user:
+    description: Geeft toegang tot basis MultiPermissions commando's
+    default: true
